RESOLVED FIXED59996
Dispatch the PluginProcessCrashed on the connection work queue
https://bugs.webkit.org/show_bug.cgi?id=59996
Summary Dispatch the PluginProcessCrashed on the connection work queue
Anders Carlsson
Reported 2011-05-02 18:15:29 PDT
Dispatch the PluginProcessCrashed on the connection work queue
Attachments
Patch (4.27 KB, patch)
2011-05-02 18:17 PDT, Anders Carlsson
oliver: review+
Anders Carlsson
Comment 1 2011-05-02 18:17:16 PDT
Anders Carlsson
Comment 2 2011-05-02 18:19:11 PDT
Note You need to log in before you can comment on or make changes to this bug.