2011-05-02  Anders Carlsson  <andersca@apple.com>

Reviewed by Oliver Hunt.

        Dispatch the PluginProcessCrashed on the connection work queue
        https://bugs.webkit.org/show_bug.cgi?id=59996

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initialize):
        Add the web process as a queue client.

        (WebKit::WebProcess::terminate):
        Remove the web process as a queue client.

        (WebKit::WebProcess::willProcessMessageOnClientRunLoop):
        Try calling willProcessWebProcessMessageOnClientRunLoop.

        * WebProcess/WebProcess.messages.in:
        Add the DispatchOnConnectionQueue attribute to PluginProcessCrashed.


Canonical link: https://commits.webkit.org/75260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85570 268f45cc-cd09-0410-ab3c-d52691b4dbfc